src/styles/globals.css
/* @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,100;1,300;1,400;1,700&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  /* #region  /**=========== Primary Color =========== */
  /* !STARTERCONF Customize these variable, copy and paste from /styles/colors.css for list of colors */
  --tw-color-primary-50: 240 249 255;
  --tw-color-primary-100: 224 242 254;
  --tw-color-primary-200: 186 230 253;
  --tw-color-primary-300: 125 211 252;
  --tw-color-primary-400: 56 189 248;
  --tw-color-primary-500: 14 165 233;
  --tw-color-primary-600: 2 132 199;
  --tw-color-primary-700: 3 105 161;
  --tw-color-primary-800: 7 89 133;
  --tw-color-primary-900: 12 74 110;
  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f0f9ff */
  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #e0f2fe */
  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #bae6fd */
  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #7dd3fc */
  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #38bdf8 */
  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #0ea5e9 */
  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #0284c7 */
  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #0369a1 */
  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #075985 */
  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #0c4a6e */
  /* #endregion  /**======== Primary Color =========== */
}

@layer base {
  /* inter var - latin */
  @font-face {
    font-family: 'Inter';
    font-style: normal;
    font-weight: 100 900;
    font-display: optional;
    src: url('/fonts/inter-var-latin.woff2') format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
      U+2215, U+FEFF, U+FFFD;
  }

  .cursor-newtab {
    cursor: url('/images/new-tab.png') 10 10, pointer;
  }

  /* #region  /**=========== Typography =========== */
  .h0 {
    @apply font-primary text-3xl font-bold md:text-5xl;
  }

  h1,
  .h1 {
    @apply font-primary text-2xl font-bold md:text-4xl;
  }

  h2,
  .h2 {
    @apply font-primary text-xl font-bold md:text-3xl;
  }

  h3,
  .h3 {
    @apply font-primary text-lg font-bold md:text-2xl;
  }

  h4,
  .h4 {
    @apply font-primary text-base font-bold md:text-lg;
  }

  body,
  .p {
    @apply font-primary text-sm md:text-base;
  }
  /* #endregion  /**======== Typography =========== */

  .layout {
    /* 1100px */
    max-width: 68.75rem;
    @apply mx-auto w-11/12;
  }

  .bg-dark a.custom-link {
    @apply border-gray-200 hover:border-gray-200/0;
  }

  /* Class to adjust with sticky footer */
  .min-h-main {
    @apply min-h-[calc(100vh-56px)];
  }
}

@layer utilities {
  .animated-underline {
    background-image: linear-gradient(#33333300, #33333300),
      linear-gradient(
        to right,
        var(--color-primary-400),
        var(--color-primary-500)
      );
    background-size: 100% 2px, 0 2px;
    background-position: 100% 100%, 0 100%;
    background-repeat: no-repeat;
  }
  @media (prefers-reduced-motion: no-preference) {
    .animated-underline {
      transition: 0.3s ease;
      transition-property: background-size, color, background-color,
        border-color;
    }
  }
  .animated-underline:hover,
  .animated-underline:focus-visible {
    background-size: 0 2px, 100% 2px;
  }

  .animation-delay-2000 {
    animation-delay: 2s;
  }
  .animation-delay-4000 {
    animation-delay: 4s;
  }
}



body {
  /* font-family: 'Lato', monospace; */
  background-color: #020826;
}

footer a:hover {
  text-decoration: underline;
}

/* Logged OUT button */

.css-1un3lp3 {
  border-radius: 6px !important;
  padding: 12px 10px !important;
  background-color: #1D4ED8 !important;
  color: #d6d6d6 !important;
}

.css-1un3lp3:hover {
  transform: scale(1.05) !important;
  color: #ffffff !important;
  transition: all 0.2s;
}

.css-6j78kk {
  padding: 7px 8px !important;
  border-radius: 6px !important;
}

.css-16br1f7 {
  padding: 6px 8px !important;
  gap: 12px !important;
  background-color: #20284ebe !important;
  border-radius: 8px !important;
  border: none !important;
}

/* .css-tkbtnr {
  border-radius: 8px !important;
  padding: 20px !important;
  border: 1px solid hsl(241, 5.0%, 14.3%);
  background-color: #0a153c !important;
} */

.css-16br1f7 img {
  width: 28px !important;
}

.css-1iyoj2o div {
  height: 3px !important;
}

/* Scroll Icon Animation */

.icon-scroll,
.icon-scroll:before {
  position: absolute;
  left: 50%;
}
.icon-scroll {
  width: 30px;
  height: 50px;
  margin-left: -20px;
  /* bottom: 10%; */
  /* margin-top: -35px; */
  box-shadow: inset 0 0 0 1px #fff;
  border-radius: 25px;
}
.icon-scroll:before {
  content: '';
  width: 6px;
  height: 6px;
  background: #fff;
  margin-left: -3px;
  top: 8px;
  border-radius: 4px;
  -webkit-animation-duration: 1.5s;
          animation-duration: 1.5s;
  -webkit-animation-iteration-count: infinite;
          animation-iteration-count: infinite;
  -webkit-animation-name: scroll;
          animation-name: scroll;
}
@-webkit-keyframes scroll {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: translateY(46px);
  }
}
@keyframes scroll {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: translateY(46px);
  }
}

.box {
  position: relative;
  width: auto;
  height: auto;
  background: transparent;
  border-radius: 12px;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.box::before { 
  content: '';
  position: absolute;
  width: 700px;
  height: 700px;
  background-image: conic-gradient(transparent, transparent, transparent, #B72030);
  animation: animate 8s linear infinite;
}

.box::after { 
  content: '';
  position: absolute;
  width: 700px;
  height: 700px;
  background-image: conic-gradient(transparent, transparent, transparent, #2962E7);
  animation: animate 8s linear infinite;
  animation-delay: -4s;
}

@keyframes animate 
{
  0%
  {
    transform: rotate(0deg);
  }
  100%
  {
    transform: rotate(360deg);
  }
}

.box span {
  position: absolute;
  inset: 6px;
  border-radius: 8px;
  background: #141c3f;
  z-index: 1;
}

.box img {
  z-index: 10;
  padding: 12px;
  border-radius: 17px;
}

.load-wraper{
  position: relative;
  height: 100%;
  width: 100%;
  background-color: rgb(211,211,211);
  z-index: 44;
  overflow: hidden;
  border-radius: 5px;
}
.activity{
  position: absolute;
  left: -45%;
  height: 100%;
  width: 45%;
  background-image: linear-gradient(to left, rgba(251,251,251, .05), rgba(251,251,251, .3), rgba(251,251,251, .6), rgba(251,251,251, .3), rgba(251,251,251, .05));
  background-image: -moz-linear-gradient(to left, rgba(251,251,251, .05), rgba(251,251,251, .3), rgba(251,251,251, .6), rgba(251,251,251, .3), rgba(251,251,251, .05));
  background-image: -webkit-linear-gradient(to left, rgba(251,251,251, .05), rgba(251,251,251, .3), rgba(251,251,251, .6), rgba(251,251,251, .3), rgba(251,251,251, .05));
  animation: loading 1s infinite;
  z-index: 45;
}

@keyframes loading {
  0%{
    left: -45%;
  }
  100%{
    left: 100%;
  }
}

.tippy-popper {
  max-width: 260px !important;
}

.tippy-tooltip, .tippy-tooltip [x-circle] {
  background-color: #f6f6f6 !important;
}

.tippy-tooltip-content {
  background-color: transparent;
  text-align: left;
  color: #000000;

}

.tippy-popper[x-placement^=top] [x-arrow] {
  border-top: 7px solid #f6f6f6 !important;
}

.Toastify__toast-body {
  padding: 12px !important;
}

.Toastify__toast-theme--dark {
  background: #f6f6f6 !important;
  color: #000000 !important;
}

.Toastify__toast-theme--dark button {
  color: #000000 !important;
}

/* FAQ */

.container {
  padding: 2rem;
  text-align: center;
}

.faq {
  margin: 3rem 0;
}
.question-wrapper {
  border-bottom: 1px solid $details;
  margin: 0 auto;
  padding: 1rem;
  transition: 1s;
}

.question {
  display: flex;
  font-size: 1rem;
  font-weight: 500;
  color: $primary-text-color;
  display: flex;
  justify-content: space-between;
  cursor: pointer;
}

button {
  background-color: transparent;
  border: none;
  cursor: pointer;
}

button:focus {
  outline: none;
}

.answer {
  display: none;
}

.answer.active {
  display: block;
  text-align: left;
  padding-top: 1.5rem;
  line-height: 1.5;
  animation: slidein 0.4s;
  animation-fill-mode: forwards;
}

@keyframes slidein {
  from {
    opacity: 0.3;
    transform: translateY(-20%);
  }
  to {
    opacity: 1;
    transform: translateY(0%);
  }
}

/* SHINE ANIMATION */

.shine {
  position: relative;
}

.shine::after {
  content: '';
  opacity: 0;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: #868aeb;
  border-radius: 3px;
  animation: animate-shine 4s ease-out infinite;
}

@keyframes animate-shine {
  0% { 
      opacity: 0;
      width: 0; }
  16.66667% { 
      opacity: .3; }
  33.33333% { 
      opacity: 0;
      width: 95%; }
  100% { 
      opacity: 0;
      width: 95%; }
}


/* Soundplayer icon */

@keyframes playPulse {
  0% {
      transform: scaleY(.25)
  }

  50% {
      transform: scaleY(.5)
  }

  to {
      transform: scaleY(1)
  }
}

.animate-[playPulse1] {
  animation: playPulse .5s ease-in-out -.2s infinite alternate
}

.animate-\[playPulse_0\.5s_ease-in-out_-0\.2s_infinite_alternate\] {
  animation: playPulse .5s ease-in-out -.2s infinite alternate
}

.animate-\[playPulse_0\.35s_ease-in-out_-0\.5s_infinite_alternate\] {
  animation: playPulse .35s ease-in-out -.5s infinite alternate
}

.animate-\[playPulse_0\.65s_ease-in-out_-0\.7s_infinite_alternate\] {
  animation: playPulse .65s ease-in-out -.7s infinite alternate
}

